--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -1723,6 +1723,15 @@
 
   </script>
 	<script type="text/javascript">
+    function set_select_checked(selectId, checkValue){
+      var select = document.getElementById(selectId);
+      for (var i = 0; i < select.options.length; i++) {
+        if (select.options[i].value == checkValue){
+          select.options[i].selected = true;
+          break;
+        }
+      }
+    }
 		function previewDoc() {
 			var asciidoctor = Asciidoctor()
 			var content = document.getElementById("editor").value ?? '';
@@ -1730,21 +1739,24 @@
 			var doctitle = doc.getDocumentTitle();
 			var html = asciidoctor.convert(content, { 'standalone': true, 'attributes': { 'showtitle': true, 'icons': 'font'} });
       var css_file = document.getElementById("css-list").value ?? 'NONE';
-			var css_content = document.getElementById('css-content').value ?? '';
 			var template = '<!DOCTYPE html>' +
 			'<html>' +
 			'<head>' +
 			'<meta charset="UTF-8">' +
-			'<title>' + doctitle + '</title>' +
-			'<link href="https://picsew.cn/asciidoctor/stylesheets/' + css_file + '" rel="stylesheet" type="text/css">' +
-			'<style type="text/css">' +
-			css_content +
-			'</style>' +
-			'</head>' +
-			'<body>' +
-			html
-			'</body>' +
-			'</html>'
+			'<title>' + doctitle + '</title>';
+      if (css_file == 'NONE') {
+        var css_content = document.getElementById('css-content').value ?? '';
+        template += '<style type="text/css">' +
+  			css_content +
+  			'</style>';
+      } else {
+  			template += '<link href="https://picsew.cn/asciidoctor/stylesheets/' + css_file + '" rel="stylesheet" type="text/css">';
+      }
+      template += '</head>' +
+      '<body>' +
+      html
+      '</body>' +
+      '</html>';
 			var iframe = document.getElementById('preview');
 			iframe.srcdoc = template;
 		};
@@ -1786,6 +1798,7 @@
 				var reader = new FileReader();
 				reader.onload = function() {
 					document.getElementById('css-content').value = this.result;
+          set_select_checked('css-list', 'NONE');
 				}
 				reader.readAsText(file);
 			}
@@ -1796,6 +1809,7 @@
 				xmlDoc.async = false;
 				xmlDoc.load(input.value);
 				document.getElementById('css-content').value = xmlDoc.xml;
+        set_select_checked('css-list', 'NONE');
 			}
 			//支持FF
 			else if (document.implementation && document.implementation.createDocument) {
@@ -1804,6 +1818,7 @@
 				xmlDoc.async = false;
 				xmlDoc.load(input.value);
 				document.getElementById('css-content').value = xmlDoc.xml;
+        set_select_checked('css-list', 'NONE');
 			} else {
 				alert('error');
 			}
