adoc-riak-fixed.css

--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -219,6 +219,7 @@
           <option value="adoc-foundation-potion.css">adoc-foundation-potion.css</option>
           <option value="adoc-readthedocs.css">adoc-readthedocs.css</option>
           <option value="adoc-riak.css">adoc-riak.css</option>
+          <option value="adoc-riak-fixed.css">adoc-riak-fixed.css</option>
           <option value="adoc-iconic.css">adoc-iconic.css</option>
           <option value="adoc-rocket-panda.css">adoc-rocket-panda.css</option>
         </optgroup>
