--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AsciiDoctor Live v2.0</title>
+  <title>AsciiDoctor Live v2.1</title>
   <style media="screen" type="text/css">
     * {
       box-sizing: border-box;
@@ -356,9 +356,9 @@ end
   		<input type='file' accept='text/css' name="Open Stylesheet" onchange='loadCss(this)'>
       <label>在线样式：</label>
       <select id="css-list">
-        <option value="NONE" selected>无样式</option>
+        <option value="NONE">无样式</option>
         <optgroup label="默认组">
-          <option value="asciidoctor.css">asciidoctor.css</option>
+          <option value="asciidoctor.css" selected>asciidoctor.css</option>
           <option value="adoc-golo.css">adoc-golo.css</option>
           <option value="adoc-colony.css">adoc-colony.css</option>
           <option value="adoc-github.css">adoc-github.css</option>
