--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AsciiDoctor Live v2.1</title>
+  <title>AsciiDoctor Live v2.2</title>
   <style media="screen" type="text/css">
     * {
       box-sizing: border-box;
@@ -245,6 +245,10 @@
 
 [[bookmark-title,cunstom-tag]]
 == 标题
+
+[.text-center]
+.Programming is a walk in the park
+image::https://picsew.cn/assets/images/programming-is-a-walk-in-the-park.png[width=100]
 
 描述内容[[bookmark-a]]一个行内标签。
 
