--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -2058,9 +2058,9 @@ end
       editorPane.focus();
     }
     
-    window.onload = function() {
+    /*window.onload = function() {
       previewDoc();
-    }
+    }*/
   </script>
   
 </body>
