--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AsciiDoctor Live v2.3</title>
+  <title>AsciiDoctor Live v2.4</title>
   <style media="screen" type="text/css">
     * {
       box-sizing: border-box;
@@ -200,14 +200,14 @@
 :sectnums:
 :toc: left
 :toclevels: 6
-:toc-title: 索引
-:doctitle: 文档标题
+:toc-title: TOC
+:doctitle: This is a Title
 :icons: font
 :source-highlighter: pygments
 
 = {doctitle}
-:author: 李申翊
-:email: meniny@miriding.com
+:author: Ezra
+:email: ezra@domain.com
 :revnumber: 1.0.0
 :revdate: Nov. 17, 2020
 :revremark: The first incarnation of {doctitle}
