--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AsciiDoctor Live v2.6</title>
+  <title>AsciiDoctor Live v2.7</title>
   <style media="screen" type="text/css">
     * {
       box-sizing: border-box;
@@ -352,7 +352,7 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 ====</textarea>
     <iframe id="preview"></iframe>
     <textarea class="css" id="css-content" style="display: none;"></textarea>
-    <textarea class="adocname" id="adoc-name" style="display: none;"></textarea>
+    <textarea class="adocname" id="adoc-name" style="display: none;">Untitled</textarea>
   </section>
   <header>
     <span id="brand"><strong>AsciiDoctor Live</strong> <span id="filename"></span></span>
