--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AsciiDoctor Live v2.7</title>
+  <title>AsciiDoctor Live v2.8</title>
   <style media="screen" type="text/css">
     * {
       box-sizing: border-box;
@@ -1887,53 +1887,214 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
   </script>
   <!-- DOWNLOAD.JS -->
   <script type="text/javascript">
-    //download.js v4.21, by dandavis; 2008-2018. [MIT] see http://danml.com/download.html for tests/usage
-;(function(root,factory){typeof define=="function"&&define.amd?define([],factory):typeof exports=="object"?module.exports=factory():root.download=factory()})(this,function(){return function download(data,strFileName,strMimeType){var self=window,defaultMime="application/octet-stream",mimeType=strMimeType||defaultMime,payload=data,url=!strFileName&&!strMimeType&&payload,anchor=document.createElement("a"),toString=function(a){return String(a)},myBlob=self.Blob||self.MozBlob||self.WebKitBlob||toString,fileName=strFileName||"download",blob,reader;myBlob=myBlob.call?myBlob.bind(self):Blob,String(this)==="true"&&(payload=[payload,mimeType],mimeType=payload[0],payload=payload[1]);if(url&&url.length<2048){fileName=url.split("/").pop().split("?")[0],anchor.href=url;if(anchor.href.indexOf(url)!==-1){var ajax=new XMLHttpRequest;return ajax.open("GET",url,!0),ajax.responseType="blob",ajax.onload=function(e){download(e.target.response,fileName,defaultMime)},setTimeout(function(){ajax.send()},0),ajax}}if(/^data:([\w+-]+\/[\w+.-]+)?[,;]/.test(payload)){if(!(payload.length>2096103.424&&myBlob!==toString))return navigator.msSaveBlob?navigator.msSaveBlob(dataUrlToBlob(payload),fileName):saver(payload);payload=dataUrlToBlob(payload),mimeType=payload.type||defaultMime}else if(/([\x80-\xff])/.test(payload)){var i=0,tempUiArr=new Uint8Array(payload.length),mx=tempUiArr.length;for(i;i<mx;++i)tempUiArr[i]=payload.charCodeAt(i);payload=new myBlob([tempUiArr],{type:mimeType})}blob=payload instanceof myBlob?payload:new myBlob([payload],{type:mimeType});function dataUrlToBlob(strUrl){var parts=strUrl.split(/[:;,]/),type=parts[1],indexDecoder=strUrl.indexOf("charset")>0?3:2,decoder=parts[indexDecoder]=="base64"?atob:decodeURIComponent,binData=decoder(parts.pop()),mx=binData.length,i=0,uiArr=new Uint8Array(mx);for(i;i<mx;++i)uiArr[i]=binData.charCodeAt(i);return new myBlob([uiArr],{type:type})}function saver(url,winMode){if("download"in anchor)return anchor.href=url,anchor.setAttribute("download",fileName),anchor.className="download-js-link",anchor.innerHTML="downloading...",anchor.style.display="none",anchor.addEventListener("click",function(e){e.stopPropagation(),this.removeEventListener("click",arguments.callee)}),document.body.appendChild(anchor),setTimeout(function(){anchor.click(),document.body.removeChild(anchor),winMode===!0&&setTimeout(function(){self.URL.revokeObjectURL(anchor.href)},250)},66),!0;if(/(Version)\/(\d+)\.(\d+)(?:\.(\d+))?.*Safari\//.test(navigator.userAgent))return/^data:/.test(url)&&(url="data:"+url.replace(/^data:([\w\/\-\+]+)/,defaultMime)),window.open(url)||confirm("Displaying New Document\n\nUse Save As... to download, then click back to return to this page.")&&(location.href=url),!0;var f=document.createElement("iframe");document.body.appendChild(f),!winMode&&/^data:/.test(url)&&(url="data:"+url.replace(/^data:([\w\/\-\+]+)/,defaultMime)),f.src=url,setTimeout(function(){document.body.removeChild(f)},333)}if(navigator.msSaveBlob)return navigator.msSaveBlob(blob,fileName);if(self.URL)saver(self.URL.createObjectURL(blob),!0);else{if(typeof blob=="string"||blob.constructor===toString)try{return saver("data:"+mimeType+";base64,"+self.btoa(blob))}catch(y){return saver("data:"+mimeType+","+encodeURIComponent(blob))}reader=new FileReader,reader.onload=function(e){saver(this.result)},reader.readAsDataURL(blob)}return!0}});
+      //download.js v4.2, by dandavis; 2008-2016. [CCBY2] see http://danml.com/download.html for tests/usage
+// v1 landed a FF+Chrome compat way of downloading strings to local un-named files, upgraded to use a hidden frame and optional mime
+// v2 added named files via a[download], msSaveBlob, IE (10+) support, and window.URL support for larger+faster saves than dataURLs
+// v3 added dataURL and Blob Input, bind-toggle arity, and legacy dataURL fallback was improved with force-download mime and base64 support. 3.1 improved safari handling.
+// v4 adds AMD/UMD, commonJS, and plain browser support
+// v4.1 adds url download capability via solo URL argument (same domain/CORS only)
+// v4.2 adds semantic variable names, long (over 2MB) dataURL support, and hidden by default temp anchors
+// https://github.com/rndme/download
+
+(function (root, factory) {
+	if (typeof define === 'function' && define.amd) {
+		// AMD. Register as an anonymous module.
+		define([], factory);
+	} else if (typeof exports === 'object') {
+		// Node. Does not work with strict CommonJS, but
+		// only CommonJS-like environments that support module.exports,
+		// like Node.
+		module.exports = factory();
+	} else {
+		// Browser globals (root is window)
+		root.download = factory();
+  }
+}(this, function () {
+
+	return function download(data, strFileName, strMimeType) {
+
+		var self = window, // this script is only for browsers anyway...
+			defaultMime = "application/octet-stream", // this default mime also triggers iframe downloads
+			mimeType = strMimeType || defaultMime,
+			payload = data,
+			url = !strFileName && !strMimeType && payload,
+			anchor = document.createElement("a"),
+			toString = function(a){return String(a);},
+			myBlob = (self.Blob || self.MozBlob || self.WebKitBlob || toString),
+			fileName = strFileName || "download",
+			blob,
+			reader;
+			myBlob= myBlob.call ? myBlob.bind(self) : Blob ;
+	  
+		if(String(this)==="true"){ //reverse arguments, allowing download.bind(true, "text/xml", "export.xml") to act as a callback
+			payload=[payload, mimeType];
+			mimeType=payload[0];
+			payload=payload[1];
+		}
+
+
+		if(url && url.length< 2048){ // if no filename and no mime, assume a url was passed as the only argument
+			fileName = url.split("/").pop().split("?")[0];
+			anchor.href = url; // assign href prop to temp anchor
+		  	if(anchor.href.indexOf(url) !== -1){ // if the browser determines that it's a potentially valid url path:
+        		var ajax=new XMLHttpRequest();
+        		ajax.open( "GET", url, true);
+        		ajax.responseType = 'blob';
+        		ajax.onload= function(e){ 
+				  download(e.target.response, fileName, defaultMime);
+				};
+        		setTimeout(function(){ ajax.send();}, 0); // allows setting custom ajax headers using the return:
+			    return ajax;
+			} // end if valid url?
+		} // end if url?
+
+
+		//go ahead and download dataURLs right away
+		if(/^data\:[\w+\-]+\/[\w+\-]+[,;]/.test(payload)){
+		
+			if(payload.length > (1024*1024*1.999) && myBlob !== toString ){
+				payload=dataUrlToBlob(payload);
+				mimeType=payload.type || defaultMime;
+			}else{			
+				return navigator.msSaveBlob ?  // IE10 can't do a[download], only Blobs:
+					navigator.msSaveBlob(dataUrlToBlob(payload), fileName) :
+					saver(payload) ; // everyone else can save dataURLs un-processed
+			}
+			
+		}//end if dataURL passed?
+
+		blob = payload instanceof myBlob ?
+			payload :
+			new myBlob([payload], {type: mimeType}) ;
+
+
+		function dataUrlToBlob(strUrl) {
+			var parts= strUrl.split(/[:;,]/),
+			type= parts[1],
+			decoder= parts[2] == "base64" ? atob : decodeURIComponent,
+			binData= decoder( parts.pop() ),
+			mx= binData.length,
+			i= 0,
+			uiArr= new Uint8Array(mx);
+
+			for(i;i<mx;++i) uiArr[i]= binData.charCodeAt(i);
+
+			return new myBlob([uiArr], {type: type});
+		 }
+
+		function saver(url, winMode){
+
+			if ('download' in anchor) { //html5 A[download]
+				anchor.href = url;
+				anchor.setAttribute("download", fileName);
+				anchor.className = "download-js-link";
+				anchor.innerHTML = "downloading...";
+				anchor.style.display = "none";
+				document.body.appendChild(anchor);
+				setTimeout(function() {
+					anchor.click();
+					document.body.removeChild(anchor);
+					if(winMode===true){setTimeout(function(){ self.URL.revokeObjectURL(anchor.href);}, 250 );}
+				}, 66);
+				return true;
+			}
+
+			// handle non-a[download] safari as best we can:
+			if(/(Version)\/(\d+)\.(\d+)(?:\.(\d+))?.*Safari\//.test(navigator.userAgent)) {
+				url=url.replace(/^data:([\w\/\-\+]+)/, defaultMime);
+				if(!window.open(url)){ // popup blocked, offer direct download:
+					if(confirm("Displaying New Document\n\nUse Save As... to download, then click back to return to this page.")){ location.href=url; }
+				}
+				return true;
+			}
+
+			//do iframe dataURL download (old ch+FF):
+			var f = document.createElement("iframe");
+			document.body.appendChild(f);
+
+			if(!winMode){ // force a mime that will download:
+				url="data:"+url.replace(/^data:([\w\/\-\+]+)/, defaultMime);
+			}
+			f.src=url;
+			setTimeout(function(){ document.body.removeChild(f); }, 333);
+
+		}//end saver
+
+
+
+
+		if (navigator.msSaveBlob) { // IE10+ : (has Blob, but not a[download] or URL)
+			return navigator.msSaveBlob(blob, fileName);
+		}
+
+		if(self.URL){ // simple fast and modern way using Blob and URL:
+			saver(self.URL.createObjectURL(blob), true);
+		}else{
+			// handle non-Blob()+non-URL browsers:
+			if(typeof blob === "string" || blob.constructor===toString ){
+				try{
+					return saver( "data:" +  mimeType   + ";base64,"  +  self.btoa(blob)  );
+				}catch(y){
+					return saver( "data:" +  mimeType   + "," + encodeURIComponent(blob)  );
+				}
+			}
+
+			// Blob but not URL support:
+			reader=new FileReader();
+			reader.onload=function(e){
+				saver(this.result);
+			};
+			reader.readAsDataURL(blob);
+		}
+		return true;
+	}; /* end download() */
+}));  
+
   </script>
 	<script type="text/javascript">
-    function set_select_checked(selectId, checkValue){
-      var select = document.getElementById(selectId);
-      for (var i = 0; i < select.options.length; i++) {
-        if (select.options[i].value == checkValue){
-          select.options[i].selected = true;
-          break;
+        function set_select_checked(selectId, checkValue){
+          var select = document.getElementById(selectId);
+          for (var i = 0; i < select.options.length; i++) {
+            if (select.options[i].value == checkValue){
+              select.options[i].selected = true;
+              break;
+            }
+          }
         }
-      }
-    }
 		function previewDoc() {
 			var asciidoctor = Asciidoctor()
 			var content = document.getElementById("editor").value ?? '';
-      var doc = asciidoctor.load(content);
+			var doc = asciidoctor.load(content);
 			var doctitle = doc.getDocumentTitle();
 			var html = asciidoctor.convert(content, { 'standalone': true, 'attributes': { 'showtitle': true, 'icons': 'font'} });
-      var css_file = document.getElementById("css-list").value ?? 'NONE';
+			var css_file = document.getElementById("css-list").value ?? 'NONE';
 			var template = '<!DOCTYPE html>' +
 			'<html>' +
 			'<head>' +
 			'<meta charset="UTF-8">' +
 			'<title>' + doctitle + '</title>';
-      if (css_file == 'NONE') {
-        var css_content = document.getElementById('css-content').value ?? '';
-        template += '<style type="text/css">' +
-  			css_content +
-  			'</style>';
-      } else {
-  			template += '<link href="https://picsew.cn/asciidoctor/stylesheets/' + css_file + '" rel="stylesheet" type="text/css">';
-      }
-      template += '</head>' +
-      '<body>' +
-      html
-      '</body>' +
-      '</html>';
+            if (css_file == 'NONE') {
+              var css_content = document.getElementById('css-content').value ?? '';
+              template += '<style type="text/css">' +
+        			css_content +
+        			'</style>';
+            } else {
+        			template += '<link href="https://picsew.cn/asciidoctor/stylesheets/' + css_file + '" rel="stylesheet" type="text/css">';
+            }
+            template += '</head>' +
+            '<body>' +
+            html
+            '</body>' +
+            '</html>';
 			var iframe = document.getElementById('preview');
 			iframe.srcdoc = template;
 		};
-    function loadLocalFile(input, contentToElement, nameToElement) {
+		function loadLocalFile(input, contentToElement, nameToElement) {
 			//支持chrome IE10
 			if (window.FileReader) {
 				var file = input.files[0];
 				filename = file.name.split(".")[0];
-        document.getElementById(nameToElement).value = filename;
+				document.getElementById(nameToElement).value = filename;
 				var reader = new FileReader();
 				reader.onload = function() {
 					document.getElementById(contentToElement).value = this.result;
@@ -1941,7 +2102,7 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 				reader.readAsText(file);
 			}
 			//支持IE 7 8 9 10
-			else if (typeof window.ActiveXObject != 'undefined'){
+			else if (typeof window.ActiveXObject != 'undefined') {
 				var xmlDoc;
 				xmlDoc = new ActiveXObject("Microsoft.XMLDOM");
 				xmlDoc.async = false;
@@ -1964,7 +2125,7 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 			if (window.FileReader) {
 				var file = input.files[0];
 				filename = file.name.split(".")[0];
-        document.getElementById('adoc-name').value = filename;
+				document.getElementById('adoc-name').value = filename;
 				var reader = new FileReader();
 				reader.onload = function() {
 					document.getElementById('editor').value = this.result;
@@ -1972,7 +2133,7 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 				reader.readAsText(file);
 			}
 			//支持IE 7 8 9 10
-			else if (typeof window.ActiveXObject != 'undefined'){
+			else if (typeof window.ActiveXObject != 'undefined') {
 				var xmlDoc;
 				xmlDoc = new ActiveXObject("Microsoft.XMLDOM");
 				xmlDoc.async = false;
@@ -1998,18 +2159,18 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 				var reader = new FileReader();
 				reader.onload = function() {
 					document.getElementById('css-content').value = this.result;
-          set_select_checked('css-list', 'NONE');
+					set_select_checked('css-list', 'NONE');
 				}
 				reader.readAsText(file);
 			}
 			//支持IE 7 8 9 10
-			else if (typeof window.ActiveXObject != 'undefined'){
+			else if (typeof window.ActiveXObject != 'undefined') {
 				var xmlDoc;
 				xmlDoc = new ActiveXObject("Microsoft.XMLDOM");
 				xmlDoc.async = false;
 				xmlDoc.load(input.value);
 				document.getElementById('css-content').value = xmlDoc.xml;
-        set_select_checked('css-list', 'NONE');
+				set_select_checked('css-list', 'NONE');
 			}
 			//支持FF
 			else if (document.implementation && document.implementation.createDocument) {
@@ -2018,32 +2179,26 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
 				xmlDoc.async = false;
 				xmlDoc.load(input.value);
 				document.getElementById('css-content').value = xmlDoc.xml;
-        set_select_checked('css-list', 'NONE');
+				set_select_checked('css-list', 'NONE');
 			} else {
 				alert('error');
 			}
 		};
-    function saveDoc() {
+		function getADocName() {
+		    return document.getElementById('adoc-name').value ?? +new Date();
+		};
+		function saveText(content, mime, name, ext) {
+			var dataText = 'data:text/' + mime + ';charset=utf-8,' + encodeURIComponent(content);
+			download(new Blob([dataText], name + '.' + 'ext', 'text/' + mime);
+		};
+		function saveDoc() {
 			var editor = document.getElementById('editor');
-			//var elementA = document.createElement('a');
-			var dataText = 'data:text/plain;charset=utf-8,' + encodeURIComponent(editor.value);
-			/*elementA.setAttribute('href', dataText);
-			elementA.setAttribute('download', +new Date() + ".adoc");
-			elementA.setAttribute('target', "__blank");
-			elementA.style.display = 'none';
-			document.body.appendChild(elementA);
-			elementA.click();
-			document.body.removeChild(elementA);
-			window.open(dataText);*/
-			//download(editor.value, +new Date() + ".adoc", "text/plain");
-      var fn = document.getElementById('adoc-name').value ?? +new Date();
-			download(dataText, fn + ".adoc", "text/plain");
+			saveText(editor.value, 'plain', getADocName(), 'adoc');
 		};
 		function saveHTML() {
 			var iframe = document.getElementById('preview');
-			var dataText = 'data:text/html;charset=utf-8,' + encodeURIComponent(iframe.srcdoc);
-      var fn = document.getElementById('adoc-name').value ?? +new Date();
-			download(dataText, fn + ".html", "text/html");
+			var fn = 
+			saveText(iframe.srcdoc, 'html', getADocName(), 'html');
 		};
 	</script>
 
