--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AsciiDoctor Live v2.8</title>
+  <title>AsciiDoctor Live v2.8.1</title>
   <style media="screen" type="text/css">
     * {
       box-sizing: border-box;
@@ -2083,7 +2083,7 @@ Attachments: link:./AdobeXD.xd[AdobeXD.xd]
             }
             template += '</head>' +
             '<body>' +
-            html
+            html +
             '</body>' +
             '</html>';
 			var iframe = document.getElementById('preview');
