--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AsciiDoctor Live v0.2.003</title>
+  <title>AsciiDoctor v0.2.004</title>
   <style media="screen" type="text/css">
     * {
       box-sizing: border-box;
@@ -343,6 +343,11 @@ end
 <1> Library import
 <2> URL mapping
 <3> Response block
+
+---
+
+[.text-center]
+[.small]#Made with ❤️ in Shenzhen#
 
 ---
 
