--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AsciiDoctor v0.2.004</title>
+  <title>AsciiDoctor v0.2.005</title>
   <style media="screen" type="text/css">
     * {
       box-sizing: border-box;
@@ -204,6 +204,8 @@
 :doctitle: This is a Title
 :icons: font
 :source-highlighter: pygments
+:last-update-label!:
+:docinfo1:
 
 = {doctitle}
 :author: Ezra
