--- a/asciidoctor/index.html
+++ b/asciidoctor/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>AsciiDoctor v0.2.005</title>
+  <title>AsciiDoctor v0.2.006</title>
   <style media="screen" type="text/css">
     * {
       box-sizing: border-box;
@@ -205,7 +205,7 @@
 :icons: font
 :source-highlighter: pygments
 :last-update-label!:
-:docinfo1:
+:docinfo: shared-footer
 
 = {doctitle}
 :author: Ezra
